# sherlock

./: .mcp.json  Directory.Build.props  LICENSE  Makefile  README.md  Sherlock.sln  Sherlock.slnx
.github/workflows/: ci.yml  publish-nuget.yml  version-check.yml
samples/Sherlock.Demo/: Program.cs  Sherlock.Demo.csproj
src/Sherlock.CLI/: ProfilerLibrary.cs  Program.cs  ReplHost.cs  RunLauncher.cs  Sherlock.CLI.csproj  Workspace.cs
src/Sherlock.CLI/Commands/: AnalyzeCommand.cs  CollectCommand.cs  McpCommand.cs  ProfilerLibrary.cs  RunCommand.cs
src/Sherlock.CLI/Export/: AllocationDot.cs  DominatorDot.cs  DotGraph.cs  FoldedStacks.cs
src/Sherlock.CLI/Rendering/: Addresses.cs  ByteSize.cs  Counts.cs  TextUtil.cs  Theme.cs  TypeNames.cs
src/Sherlock.CLI/Repl/: Args.cs  IReplCommand.cs  LineEditor.cs  Repl.cs  ReplCommandRegistry.cs  ReplHistory.cs
src/Sherlock.Core/: AllocationInfo.cs  ByteFormat.cs  ClrMDExtensions.cs  DumpAnalysisException.cs  DumpSession.cs  HeapAnalyzer.cs  HeapSnapshot.cs  Models.cs  Sherlock.Core.csproj  Snapshot.cs  SnapshotCapture.cs  SnapshotLibrary.cs  StringInterner.cs
src/Sherlock.Mcp/: Dto.cs  McpServer.cs  OpenSnapshots.cs  Sherlock.Mcp.csproj  SherlockTools.cs
src/Sherlock.Profiler/: ColorTheme.cs  MemoryDataCollector.cs  ProcessProfiler.cs  Program.cs  Sherlock.Profiler.csproj  SherlockDebugger.cs  SnapshotManager.cs
src/Sherlock.Testing/: AssertionException.cs  HeapSnapshotExtensions.cs  InspectExtensions.cs  InspectOptions.cs  IntegerAssertions.cs  ObjectInspector.cs  Sherlock.Testing.csproj  Sherlock.cs  TypeInstanceAssertion.cs  TypeInstanceView.cs  TypedObjectView.cs
src/Sherlock.Tests/: AdvancedAnalysisTests.cs  BasicLeakTests.cs  DisposableLeakTests.cs  EventHandlerLeakTests.cs  InspectApiTests.cs  PerformanceDemo.cs  Sherlock.Tests.csproj  StaticReferenceLeakTests.cs  TestUtilities.cs  TimerLeakTests.cs
src/native/: .gitignore  CMakeLists.txt  build.sh  run.sh
src/native/include/sherlock/common/: logger.hpp  spsc_queue.hpp
src/native/include/sherlock/control/: channel.hpp  protocol.hpp
src/native/include/sherlock/profiler/: aggregator.hpp  intervals.hpp  probe.hpp  profiler.hpp  trace.hpp  triggers.hpp
src/native/include/sherlock/storage/: container.hpp  profile.hpp  symbols.hpp
src/native/src/: dllmain.cpp  profiler.def
src/native/src/common/: logger.cpp
src/native/src/control/: channel.cpp
src/native/src/profiler/: aggregator.cpp  probe.cpp  profiler.cpp  trace.cpp  triggers.cpp
src/native/tests/: CMakeLists.txt  container.cpp  intervals.cpp  profile.cpp  symbols.cpp
src/native/tools/: allocgraph.py
tests/Sherlock.Core.Tests/: Sherlock.Core.Tests.csproj
(+80 files in other folders)
